fixed spacing of game board

--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ ul {
 }
 
 .status {
-  margin-bottom: 10px;
+  margin: 10px 0 20px 0;
   text-align: center;
 }
 
@@ -71,6 +71,10 @@ ul {
 
 .game-info {
   margin-left: 20px;
+}
+
+.game-board {
+  display: inline-block;
 }
 
 /* .square {
